--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  <title>Frontend Mentor | News homepage</title>
+  <title>News homepage</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="script.js" defer></script>
   <style>
